[gd_scene load_steps=53 format=2]

[ext_resource path="res://Character/Warrior_bot.gd" type="Script" id=1]
[ext_resource path="res://Graphics/Spectral_war/new/Spectral_warrior_Attack/Spectral_warrior_Attackattack_1.png" type="Texture" id=2]
[ext_resource path="res://Graphics/Spectral_war/new/Spectral_warrior_Attack/Spectral_warrior_Attackattack_2.png" type="Texture" id=3]
[ext_resource path="res://Graphics/Spectral_war/new/Spectral_warrior_Attack/Spectral_warrior_Attackattack_3.png" type="Texture" id=4]
[ext_resource path="res://Graphics/Spectral_war/new/Spectral_warrior_Attack/Spectral_warrior_Attackattack_4.png" type="Texture" id=5]
[ext_resource path="res://Graphics/Spectral_war/new/Spectral_warrior_Attack/Spectral_warrior_Attackattack_5.png" type="Texture" id=6]
[ext_resource path="res://Graphics/Spectral_war/new/Spectral_warrior_Attack/Spectral_warrior_Attackattack_6.png" type="Texture" id=7]
[ext_resource path="res://Graphics/Spectral_war/new/Spectral_warrior_Attack/Spectral_warrior_Attackattack_7.png" type="Texture" id=8]
[ext_resource path="res://Graphics/Spectral_war/new/Spectral_warrior_Attack/Spectral_warrior_Attackattack_8.png" type="Texture" id=9]
[ext_resource path="res://Graphics/Spectral_war/new/Spectral_warrior_Attack/Spectral_warrior_Attackattack_10.png" type="Texture" id=10]
[ext_resource path="res://Graphics/Spectral_war/new/Spectral_warrior_Attack/Spectral_warrior_Attackattack_11.png" type="Texture" id=11]
[ext_resource path="res://Graphics/Spectral_war/new/Spectral_warrior_die/Spectral_warrior_diedie_1.png" type="Texture" id=12]
[ext_resource path="res://Graphics/Spectral_war/new/Spectral_warrior_die/Spectral_warrior_diedie_2.png" type="Texture" id=13]
[ext_resource path="res://Graphics/Spectral_war/new/Spectral_warrior_die/Spectral_warrior_diedie_3.png" type="Texture" id=14]
[ext_resource path="res://Graphics/Spectral_war/new/Spectral_warrior_die/Spectral_warrior_diedie_4.png" type="Texture" id=15]
[ext_resource path="res://Graphics/Spectral_war/new/Spectral_warrior_die/Spectral_warrior_diedie_5.png" type="Texture" id=16]
[ext_resource path="res://Graphics/Spectral_war/new/Spectral_warrior_die/Spectral_warrior_diedie_6.png" type="Texture" id=17]
[ext_resource path="res://Graphics/Spectral_war/new/Spectral_warrior_die/Spectral_warrior_diedie_7.png" type="Texture" id=18]
[ext_resource path="res://Graphics/Spectral_war/new/Spectral_warrior_die/Spectral_warrior_diedie_8.png" type="Texture" id=19]
[ext_resource path="res://Graphics/Spectral_war/new/Spectral_warrior_die/Spectral_warrior_diedie_9.png" type="Texture" id=20]
[ext_resource path="res://Graphics/Spectral_war/new/Spectral_warrior_shield/Spectral_warrior_shieldmouv_1.png" type="Texture" id=21]
[ext_resource path="res://Graphics/Spectral_war/new/Spectral_warrior_shield/Spectral_warrior_shieldCopy_Copy_mouv_1.png" type="Texture" id=22]
[ext_resource path="res://Graphics/Spectral_war/new/Spectral_warrior_shield/Spectral_warrior_shieldCopy_mouv_1.png" type="Texture" id=23]
[ext_resource path="res://Graphics/Spectral_war/new/Spectral_warrior_legs/Spectral_warrior_legs_mouvmouv_1.png" type="Texture" id=24]
[ext_resource path="res://Graphics/Spectral_war/new/Spectral_warrior_legs/Spectral_warrior_legs_mouvmouv_2.png" type="Texture" id=25]
[ext_resource path="res://Graphics/Spectral_war/new/Spectral_warrior_legs/Spectral_warrior_legs_mouvmouv_3.png" type="Texture" id=26]
[ext_resource path="res://Graphics/Spectral_war/new/Spectral_warrior_legs/Spectral_warrior_legs_mouvmouv_4.png" type="Texture" id=27]
[ext_resource path="res://Graphics/Spectral_war/new/Spectral_warrior_legs/Spectral_warrior_legs_mouvmouv_6.png" type="Texture" id=28]
[ext_resource path="res://Graphics/Spectral_war/new/Spectral_warrior_legs/Spectral_warrior_legs_mouvmouv_7.png" type="Texture" id=29]
[ext_resource path="res://Graphics/Spectral_war/new/Spectral_warrior_legs/Spectral_warrior_legs_mouvmouv_8.png" type="Texture" id=30]
[ext_resource path="res://Graphics/Spectral_war/new/Spectral_warrior_legs/Spectral_warrior_legs_mouvmouv_9.png" type="Texture" id=31]
[ext_resource path="res://Graphics/Spectral_war/new/Spectral_warrior_legs/Spectral_warrior_legs_mouvmouv_10.png" type="Texture" id=32]
[ext_resource path="res://Graphics/Spectral_war/new/Spectral_warrior_legs/Spectral_warrior_legs_mouvmouv_11.png" type="Texture" id=33]
[ext_resource path="res://Graphics/Spectral_war/new/Spectral_warrior_legs/Spectral_warrior_legs_static.png" type="Texture" id=34]
[ext_resource path="res://Graphics/interface/bar_vie/bar_vie.png" type="Texture" id=35]
[ext_resource path="res://Graphics/interface/bar_vie/vie.png" type="Texture" id=36]
[ext_resource path="res://Graphics/Spectral_war/block_display.png" type="Texture" id=37]
[ext_resource path="res://Graphics/interface/bar_vie/vie_divine_shield.png" type="Texture" id=38]
[ext_resource path="res://Graphics/interface/bar_vie/bar_vie_divine_shield.png" type="Texture" id=39]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": false,
"name": "die",
"speed": 8.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "static",
"speed": 15.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "mouv",
"speed": 10.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "attack",
"speed": 15.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ null ],
"loop": true,
"name": "off",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 23 ), ExtResource( 21 ) ],
"loop": false,
"name": "block",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ) ],
"loop": true,
"name": "static",
"speed": 2.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ null ],
"loop": true,
"name": "off",
"speed": 5.0
}, {
"frames": [ ExtResource( 34 ) ],
"loop": true,
"name": "static",
"speed": 5.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ) ],
"loop": true,
"name": "mouv",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=4]
radius = 11.0
height = 22.0

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 35 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ null ],
"loop": true,
"name": "off",
"speed": 5.0
}, {
"frames": [ ExtResource( 39 ) ],
"loop": true,
"name": "divine_shield",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 36 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ null ],
"loop": true,
"name": "off",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 38 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "off",
"speed": 5.0
} ]

[sub_resource type="Animation" id=8]
resource_name = "attack"
length = 0.8
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attack" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("attack_hitbox/hitbox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.48 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 0.24, 0.32, 0.4, 0.48, 0.56 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 4, 5, 6, 8, 9 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("attack_check/hitbox_check:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.65 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("..")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_attack_fin"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("attack_check/hitbox_check:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.05, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 19, 100 ), Vector2( 19, -6 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "die"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "die" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("warrior_shield:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "off" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("warrior_legs:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "off" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("barre_vie:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "off" ]
}

[sub_resource type="Animation" id=10]
resource_name = "mouv"
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "mouv" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("warrior_shield:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "static" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("warrior_legs:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "mouv" ]
}

[sub_resource type="CapsuleShape2D" id=11]
radius = 5.0
height = 30.0

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [  ],
"loop": true,
"name": "off",
"speed": 5.0
}, {
"frames": [ ExtResource( 37 ) ],
"loop": true,
"name": "on",
"speed": 5.0
} ]

[sub_resource type="Animation" id=13]
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.46, 0.46 ), Vector2( 0.46, 0.46 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 4, -34 ), Vector2( 4, -34 ), Vector2( 0, -32 ) ]
}

[node name="Warrior" type="RigidBody2D" groups=[
"Character_red",
"Warrior",
]]
collision_layer = 2
collision_mask = 14
mode = 2
gravity_scale = 0.0
custom_integrator = true
script = ExtResource( 1 )

[node name="Warrior_spr" type="AnimatedSprite" parent="." groups=[
"Character_sprite",
]]
frames = SubResource( 1 )
animation = "attack"
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="warrior_shield" type="AnimatedSprite" parent="Warrior_spr"]
frames = SubResource( 2 )
animation = "static"
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="warrior_legs" type="AnimatedSprite" parent="Warrior_spr"]
frames = SubResource( 3 )
animation = "mouv"
frame = 7
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="attack_check" type="Area2D" parent="Warrior_spr"]
monitorable = false
collision_layer = 0
collision_mask = 4
__meta__ = {
"_edit_lock_": true
}

[node name="hitbox_check" type="CollisionShape2D" parent="Warrior_spr/attack_check"]
position = Vector2( 19, -6 )
shape = SubResource( 4 )
disabled = true

[node name="attack_hitbox" type="Area2D" parent="Warrior_spr"]
position = Vector2( 17, -2 )
monitorable = false
collision_layer = 0
collision_mask = 4
__meta__ = {
"_edit_lock_": true
}

[node name="hitbox" type="CollisionShape2D" parent="Warrior_spr/attack_hitbox"]
position = Vector2( 2, -4 )
shape = SubResource( 4 )
disabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="barre_vie" type="AnimatedSprite" parent="Warrior_spr"]
position = Vector2( -3, -24 )
scale = Vector2( 1.2, 1 )
frames = SubResource( 5 )
animation = "off"
__meta__ = {
"_edit_lock_": true
}

[node name="vie" type="AnimatedSprite" parent="Warrior_spr/barre_vie"]
position = Vector2( -8, -13 )
frames = SubResource( 6 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="divine_shield" type="AnimatedSprite" parent="Warrior_spr/barre_vie"]
position = Vector2( -5.83333, -9 )
frames = SubResource( 7 )
animation = "off"
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Warrior_spr"]
anims/attack = SubResource( 8 )
anims/die = SubResource( 9 )
anims/mouv = SubResource( 10 )

[node name="hit_box" type="CollisionShape2D" parent="."]
position = Vector2( -2, 0 )
shape = SubResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="block_display" type="AnimatedSprite" parent="."]
position = Vector2( 4, -34 )
scale = Vector2( 0.46, 0.46 )
frames = SubResource( 12 )
animation = "off"
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="block_display"]
anims/de-pop = SubResource( 13 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
[connection signal="body_entered" from="Warrior_spr/attack_check" to="." method="_on_attack_check_body_entered"]
[connection signal="body_entered" from="Warrior_spr/attack_hitbox" to="." method="_on_attack_hitbox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
